pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pihole
  namespace: pihole
  # annotations:
  
  #   cert-manager.io/cluster-issuer: letsencrypt-production
  #   kubernetes.io/ingress.allow-http: "true"
  #   acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
      - dns.lag0.com.br
    secretName: lag0-wildcard-certificate-secret
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-web
            port:
              number: 80
    host: dns.lag0.com.br
  ingressClassName: nginx
